crates/edgedb_codegen/tests/snapshots/codegen__codegen_literals@case_12_tuple.snap
---
source: crates/edgedb_codegen/tests/codegen.rs
expression: "&content"
---
pub mod example {
	#[doc = r" Execute the desired query."]
	#[cfg(feature = "query")]
	pub async fn query(
		client: &edgedb_tokio::Client,
	) -> core::result::Result<Output, edgedb_errors::Error> {
		client
			.query_required_single("select ('Apple', 7, true)", &())
			.await
	}
	#[doc = r" Compose the query as part of a larger transaction."]
	#[cfg(feature = "query")]
	pub async fn transaction(
		conn: &mut edgedb_tokio::Transaction,
	) -> core::result::Result<Output, edgedb_errors::Error> {
		conn.query_required_single("select ('Apple', 7, true)", &())
			.await
	}
	pub type Input = ();
	pub type Output = (String, i64, bool);
}
